Generate a sentence showing the project name rather than a (wrong) file name.

--- a/src/changes/release-notes.vm
+++ b/src/changes/release-notes.vm
@@ -17,7 +17,7 @@
 
               ${project.name} ${version} RELEASE NOTES
 
-The ${developmentTeam} is pleased to announce the release of ${finalName}
+The ${developmentTeam} is pleased to announce the release of ${project.name} ${version}
 
 $introduction.replaceAll("(?<!\015)\012", "
 ")
